data/derived/comb/progs/unify/prog3124.ml.out
Characters 29-36:
  wwhile (equ f b,b);;
          ^^^^^^^
Error: This expression has type bool but an expression was expected of type
         'a -> 'a * bool
